Added tests. Added Specs. Added allure reports.